<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textDialogSaveFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/d_save_file_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/d_save_file_date_button"
        android:text="@string/b_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="showDatePicker"/>
    <!--<DatePicker-->
        <!--android:id="@+id/datePicker"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="64dp" />-->
    <!--<TimePicker-->
        <!--android:id="@+id/numberPicker"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="64dp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/b_save_file_ok"
            android:text="@string/b_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/b_save_file_cancel"
            android:text="@string/b_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--<Button-->
        <!--android:id="@+id/button2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/numberPicker1"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:layout_marginTop="98dp"-->
        <!--android:layout_toRightOf="@+id/numberPicker1"-->
        <!--android:text="Cancel" />-->

    <!--<Button-->
        <!--android:id="@+id/button1"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignBaseline="@+id/button2"-->
        <!--android:layout_alignBottom="@+id/button2"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:layout_toLeftOf="@+id/numberPicker1"-->
        <!--android:text="Set" />-->

</RelativeLayout>